--- a/FIT3179_A2/index.html
+++ b/FIT3179_A2/index.html
@@ -22,13 +22,22 @@
         <div class="chart" id="line-chart"></div>
     </section>
 
-    <!-- Row 2: Single centered bar chart -->
-    <section class="chart-row single-chart">
-        <div class="chart" id="bar-chart"></div>
-    </section>
+    <!-- Row 2: Bar chart with text box -->
+<section class="chart-row single-chart">
+    <div class="chart" id="bar-chart"></div>
+    <div class="text-box">
+        <h2>Chart Insights</h2>
+        <p>Most visitors on a visa come to enjoy holidays and explore popular attractions. During the COVID-19 period, there was a significant drop in visitor numbers due to travel restrictions and safety concerns. However, as the situation improves, the number of tourists is gradually recovering. Times Square remains a top destination, attracting tourists worldwide with its bustling energy, bright lights, and iconic landmarks. The area symbolizes New York City’s vibrant culture, drawing visitors eager to experience its unique atmosphere. The recovery in tourism reflects growing confidence in travel, as people once again seek to explore and enjoy global destinations.
+            <br><br>
+             due to travel restrictions and safety concerns. However, as the situation improves, the number of tourists is gradually recovering. Times Square remains a top destination, attracting tourists worldwide with its bustling energy, bright lights, and iconic landmarks. The area symbolizes New York City’s vibrant culture, drawing visitors eager to experience its unique atmosphere. The recovery in tourism reflects growing confidence in travel, as people once again seek to explore and enjoy global destinations.
+
+        </p>
+    </div>
+</section>
+
 
     <footer>
-        <p>Created by Your Name. All rights reserved &copy; 2024.</p>
+        <p>Created by Anikeet Garg</p>
     </footer>
 
     <script>
